objects/NewObject__c.object
<CustomObject>
    <description>This is Testing</description>
    <fields>
        <fullName>CustomField10__c</fullName>
        <label>CustomField10</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomField1__c</fullName>
        <label>CustomField1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomField2__c</fullName>
        <label>CustomField2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>NewObject</label>
    <nameField>
        <label>NewObject NameName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewObjects</pluralLabel>
    <recordTypes>
        <fullName>Test1</fullName>
        <active>true</active>
        <label>Test1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>